# cpp-SimpleGoogleTest

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  make-execute
include/: speak.h
src/: get_char.cc  get_number.cc  get_square.cc  speak.cc
test/: runTests  test.cc
